# Arbalister

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .prettierignore  README.md  RELEASE.md  biome.json  conftest.py  install.json  jest.config.js  package.json  pyproject.toml  tsconfig.json
.github/workflows/: build.yml  check-release.yml  enforce-label.yml
arbalister/: __init__.py  adbc.py  arrow.py  file_format.py  params.py  routes.py
arbalister/tests/: test_params.py  test_routes.py
data/: generate.py
dev/: commitlint.yml
jupyter-config/server-config/: jupyterdiana.json
jupyterdiana/: __init__.py  arrow.py  routes.py
jupyterdiana/tests/: __init__.py  test_routes.py
src/: errors.ts  file-options.ts  file_options.ts  filetypes.ts  index.ts  labicons.ts  model.ts  request.ts  requests.ts  toolbar.ts  widget.ts
src/__tests__/: jupyterdiana.spec.ts  model.spec.ts
src/lab_icons/: arrowipc.ts  avro.ts  orc.ts  parquet.ts
style/: base.css
ui-tests/: package.json
ui-tests/tests/: jupyterdiana.spec.ts
