[build-system]
requires = [
  "hatchling>=1.5.0",
  "jupyterlab>=4.0.0,<5",
  "hatch-nodejs-version>=0.3.2",
]
build-backend = "hatchling.build"

[project]
name = "arbalister"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
  "Framework :: Jupyter",
  "Framework :: Jupyter :: JupyterLab",
  "Framework :: Jupyter :: JupyterLab :: 4",
  "Framework :: Jupyter :: JupyterLab :: Extensions",
  "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = ["jupyter_server>=2.4.0,<3", "pyarrow>=20.0", "datafusion>=40.0"]
dynamic = ["version", "description", "authors", "urls", "keywords"]

[tool.hatch.version]
source = "nodejs"

[tool.hatch.metadata.hooks.nodejs]
fields = ["description", "authors", "urls", "keywords"]

[tool.hatch.build.targets.sdist]
artifacts = ["arbalister/labextension"]
exclude = [".github", "binder"]

[tool.hatch.build.targets.wheel.shared-data]
"arbalister/labextension" = "share/jupyter/labextensions/arbalister"
"install.json" = "share/jupyter/labextensions/arbalister/install.json"
"jupyter-config/server-config" = "etc/jupyter/jupyter_server_config.d"

[tool.hatch.build.hooks.version]
path = "arbalister/_version.py"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
  "arbalister/labextension/static/style.js",
  "arbalister/labextension/package.json",
]
skip-if-exists = ["arbalister/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
npm = ["jlpm"]
source_dir = "src"
build_dir = "arbalister/labextension"

[tool.jupyter-releaser.options]
version_cmd = "hatch version"

[tool.jupyter-releaser.hooks]
before-build-npm = [
  "python -m pip install 'jupyterlab>=4.0.0,<5'",
  "jlpm",
  "jlpm build:prod",
]
before-build-python = ["jlpm clean:all"]

[tool.check-wheel-contents]
ignore = ["W002"]

[tool.ruff]
line-length = 110
target-version = "py312"
extend-exclude = ["arbalister/_version.py"]

[tool.ruff.lint]
select = ["E", "W", "F", "B", "C90", "I", "YTT", "PT", "D"]
ignore = [
  "D100", # Module docstrings
  "D107", # Magic methods docstring
  "D203", # Blank line after class convention is D211
  "D213", # Docstring summary convention is D212
]

[tool.mypy]
strict = true
[[tool.mypy.overrides]]
module = ["pyarrow.*", "jupyterlab.*"]
ignore_errors = true
ignore_missing_imports = true

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-64", "osx-arm64", "linux-64", "win-64"]

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev", "test"], solve-group = "default" }
pkg = { features = ["pkg"], solve-group = "default" }

[tool.pixi.dependencies]
python = "3.12.*"
nodejs = "*"
# Duplicate pyproject dependencies to resolve them with pixi
jupyter_server = "*"
pyarrow = "*"
datafusion = "*"

[tool.pixi.pypi-dependencies]
arbalister = { path = ".", editable = true }

[tool.pixi.feature.test.dependencies]
coverage = "*"
avro = ">=1.10"
pytest = ">=8.3.0"
pytest-asyncio = "*"
pytest-cov = "*"
pytest-jupyter-server = ">=0.6.0"
ruff = ">=0.4.7"
mypy = ">=1.11.0"
biome = ">=2.3"
pre-commit = ">=3.8.0"
yamlfmt = ">=0.20"
taplo = ">=0.9.2"
typos = ">=1.31.2"
faker = "*"

# Formatters

[tool.pixi.feature.test.tasks.fmt-ruff]
cmd = "ruff format"
description = "Format Python files with ruff."

[tool.pixi.feature.test.tasks.fmt-biome]
cmd = "biome format --write"
description = "Format JS/TS/CSS files with biome."

[tool.pixi.feature.test.tasks.fmt-yamlfmt]
args = [{ arg = "path", default = "." }]
cmd = "yamlfmt {{ path }}"
description = "Format Yaml files with yamlfmt."

[tool.pixi.feature.test.tasks.fmt-taplo]
cmd = "taplo format pyproject.toml"
description = "Format TOML files with taplo."

[tool.pixi.feature.test.tasks.fmt]
depends-on = [
  { task = "fmt-ruff" },
  { task = "fmt-biome" },
  { task = "fmt-yamlfmt" },
  { task = "fmt-taplo" },
]
description = "Run all code formatters."

# Checkers

[tool.pixi.feature.test.tasks.check-ruff]
cmd = "ruff check --extend-exclude '*/jupyter_server_test_config.py' --fix --unsafe-fixes"
description = "Check Python code with ruff."

[tool.pixi.feature.test.tasks.check-mypy]
cmd = "python -m mypy arbalister/ data/"
description = "Check Python typing with MyPy."

[tool.pixi.feature.test.tasks.check-biome]
# TODO Add stylelint ?
cmd = "biome check --write --error-on-warnings"
description = "Check JS/TS/CSS code with biome."

[tool.pixi.feature.test.tasks.check-typos]
cmd = "typos --write-changes"
description = "Check for English typos with typos."

[tool.pixi.feature.test.tasks.check]
depends-on = [
  { task = "check-ruff" },
  { task = "check-mypy" },
  { task = "check-biome" },
  { task = "check-typos" },
]
description = "Run all code checks."

# Tests

[tool.pixi.feature.test.tasks.test-pytest]
cmd = "python -m pytest"
description = "Test server extension with pytest."

[tool.pixi.feature.test.tasks.test-jest]
cmd = "npx --no jest --coverage"
description = "Test client extension with Jest."

[tool.pixi.feature.test.tasks.test]
depends-on = ["test-pytest", "test-jest"]
description = "Run all tests."

# All

[tool.pixi.feature.test.tasks.ci]
depends-on = ["check", "test"]
description = "Run all formatters, code checks, and tests."

[tool.pixi.feature.dev.tasks.gen-data]
cmd = """
python data/generate.py batch \
    --num-rows 1_000_000 \
    -o data/gen/test.avro \
    -o data/gen/test.csv \
    -o data/gen/test.ipc \
    -o data/gen/test.orc \
    -o data/gen/test.parquet \
"""
outputs = ["data/gen/**/test.*"]
description = """Generate different data files to use in development in data/gen."""

[tool.pixi.feature.dev.tasks.gen-data-large]
cmd = """
python data/generate.py single --num-rows 100_000_000 -o data/gen/large.parquet
"""
outputs = ["data/gen/**/large.parquet"]
description = """Generate a large parquet file."""

[tool.pixi.feature.dev.dependencies]
jupyterlab = ">=4.4"
jupyterlab-lsp = "*"
python-lsp-server-base = ">=1.11.0"
python-lsp-ruff = ">=2.2.1"
pylsp-mypy = ">=0.6.8"
vscode-langservers-extracted = ">=4.10"
typescript-language-server = ">=5.1"
typos-lsp = "*"
commitlint-rs = "*"

[tool.pixi.feature.dev.tasks.jlpm-install]
cmd = "jlpm install"
description = "Install NPM packages."
inputs = ["package.json", "yarn.lock"]
outputs = [".yarn/install-state.gz"]

[tool.pixi.feature.dev.tasks.install-dev]
depends-on = ["jlpm-install"]
cmd = "jupyter labextension develop . --overwrite"
description = "Install extension in developer mode."

[tool.pixi.feature.dev.tasks.serve-dev]
cmd = "jupyter lab"
depends-on = ["install-dev"]
description = "Launch JupyterLab with the current extension installed."

[tool.pixi.feature.dev.tasks]
jlpm = { cmd = "jlpm", description = "Run Jupyter lab package manager." }
jlpm-build = "jlpm run build"
jlpm-watch = "jlpm run watch"
pre-commit = { cmd = "pre-commit", description = "Run pre-commit executable." }
commitlint = "commitlint --config dev/commitlint.yml"
jupyter = { cmd = "jupyter", description = "Run jupyter." }
labextension = "jupyter labextension"

[tool.pixi.feature.pkg.dependencies]
python-build = "*"
# Override build-system
hatchling = ">=1.5.0"
jupyterlab = ">=4.0.0,<5"
hatch-nodejs-version = ">=0.3.2"
hatch-jupyter-builder = ">=0.5"

[tool.pixi.feature.pkg.tasks.build]
cmd = "python -m build -nx"
